# kdevelop-workshop

./: .clang-format  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  README.md  debug-kdevelop.sh  kdevelop-workshop.kdev4  run.sh
.cache/clangd/index/: kdevelop-workshop.cpp.80508E3F9CC3BEB4.idx  kdevelop-workshop.h.CF498EAA6E91448F.idx  parsesketchsdk.cpp.89F47EEAFFF81DEC.idx  parsesketchsdk.cpp.9D46B3602D855F9A.idx  parsesketchsdk.h.DDBC5D3374030D63.idx  parsesketchsdk.h.E34E4EB259864B7E.idx  sketchsdkdata.h.1CB24E71BE44150B.idx  sketchsdkdata.h.B45C3ECA6A54E156.idx  sketchsdkpanel.cpp.1D92F5030B54C0F6.idx  sketchsdkpanel.cpp.EC732A0C44E9E201.idx  sketchsdkpanel.h.4B19E35A9D923BB3.idx  sketchsdkpanel.h.86F920F029C21AA8.idx  workshopapi.cpp.A0C2C4A62BCF7BF2.idx  workshopapi.cpp.E32005BDB554860E.idx  workshopapi.h.059BE17B18236C8C.idx  workshopapi.h.3E60523853AFF5AE.idx  workshopconfigpage.cpp.828C27D67EAF7718.idx  workshopconfigpage.cpp.CDB99B09D39BB72E.idx  workshopconfigpage.h.558281442D7C787A.idx  workshopconfigpage.h.66262A4B20A76608.idx  workshopruntime.cpp.42065E4F6F363FDF.idx  workshopruntime.cpp.71645A4DEB461A89.idx  workshopruntime.h.50B6D8B952FB6E9C.idx  workshopruntime.h.E0FEC34F4EA05789.idx  workshopterminaltoolview.cpp.0B422AD04F066AF9.idx  workshopterminaltoolview.cpp.CAFB9F899E17AD80.idx  workshopterminaltoolview.h.3050E115BA89DC46.idx  workshopterminaltoolview.h.85CB111F6C36B80E.idx  workshoptoolview.cpp.1BFADECD1A389BE6.idx  workshoptoolview.cpp.DA13C609D093BCAD.idx  workshoptoolview.h.2AB70A67320F2962.idx  workshoptoolview.h.459A2F7C8DCCE040.idx  workshopwizard.cpp.844262BECE903D39.idx  workshopwizard.cpp.EF72E3439A91EC8F.idx  workshopwizard.h.761B674E214BEFB9.idx  workshopwizard.h.824B87133B2F12F0.idx
.github/workflows/: linters.yaml  package.yaml  package.yml  tests.yaml
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt  kdevelop-workshop.cpp  kdevelop-workshop.h  kdevelop-workshop.json  parsesketchsdk.cpp  parsesketchsdk.h  sketchsdkdata.h  sketchsdkpanel.cpp  sketchsdkpanel.h  workshopapi.cpp  workshopapi.h  workshopconfigpage.cpp  workshopconfigpage.h  workshopruntime.cpp  workshopruntime.h  workshopsettings.kcfg  workshopsettings.kcfgc  workshopterminaltoolview.cpp  workshopterminaltoolview.h  workshoptoolview.cpp  workshoptoolview.h  workshopwizard.cpp  workshopwizard.h
src/api/: workshopapi.cpp  workshopapi.h
src/config/: workshopconfigpage.cpp  workshopconfigpage.h  workshopconfigpage.ui
src/runtime/: workshopruntime.cpp
src/sketchsdk/: parsesketchsdk.cpp  parsesketchsdk.h  sketchsdkpanel.cpp  sketchsdkpanel.h  sketchsdkpanel.ui
src/views/: projectselectionguard.cpp  projectselectionguard.h  workshopcontextmenu.cpp  workshopcontextmenu.h  workshopterminaltoolview.cpp  workshopterminaltoolview.ui  workshoptoolview.cpp  workshoptoolview.h  workshoptoolview.ui
src/wizard/: workshopwizard.cpp  workshopwizard.h  workshopwizardgeneralpage.ui  workshopwizardreviewpage.ui  workshopwizardsdkpage.ui
tests/: CMakeLists.txt  test_parsesketchsdk.cpp  test_projectselectionguard.cpp  test_workshopcontextmenu.cpp
